packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Blog_Website__c.field-meta.xml
<CustomField>
    <fullName>Account_Blog_Website__c</fullName>
    <label>Account Blog Website</label>
    <type>Url</type>
</CustomField>