packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Contact_Us_Form__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Us_Form__c</fullName>
    <label>Account Contact Us Form</label>
    <type>Url</type>
</CustomField>