packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Facebook_URL__c</fullName>
    <label>Account Facebook URL</label>
    <type>Url</type>
</CustomField>