packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Account_Keywords__c</fullName>
    <label>Account Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>