packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Other_URLs__c.field-meta.xml
<CustomField>
    <fullName>Account_Other_URLs__c</fullName>
    <label>Account Other URLs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>