packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Account_Strategy__c</fullName>
    <label>Account Strategy</label>
    <type>TextArea</type>
</CustomField>