packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Team_Page__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Page__c</fullName>
    <label>Account Team Page</label>
    <type>Url</type>
</CustomField>