packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Web_Data__c.field-meta.xml
<CustomField>
    <fullName>Account_Web_Data__c</fullName>
    <label>Account Web Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>