packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Account_Youtube_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Youtube_URL__c</fullName>
    <label>Account Youtube URL</label>
    <type>Url</type>
</CustomField>