packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Acount_X_URL__c.field-meta.xml
<CustomField>
    <fullName>Acount_X_URL__c</fullName>
    <label>Acount X URL</label>
    <type>Url</type>
</CustomField>