packages/ennube-salesforce/force-app/main/default/objects/Account/fields/AI_Agent_Account_Step__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Account_Step__c</fullName>
    <label>AI Agent Account Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>