packages/ennube-salesforce/force-app/main/default/objects/Account/fields/AI_Agent_Enrich_Account__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Enrich_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Agent Enrich Account</label>
    <type>Checkbox</type>
</CustomField>