packages/ennube-salesforce/force-app/main/default/objects/Account/fields/LastUpdatebyAgent__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatebyAgent__c</fullName>
    <label>LastUpdatebyAgent</label>
    <type>DateTime</type>
</CustomField>