packages/ennube-salesforce/force-app/main/default/objects/Account/fields/LastUpdatedByAgentDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedByAgentDateTime__c</fullName>
    <label>LastUpdatedByAgentDateTime</label>
    <type>DateTime</type>
</CustomField>