packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Products_Description__c.field-meta.xml
<CustomField>
    <fullName>Products_Description__c</fullName>
    <label>Products Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>