packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Prospect_Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account_Source__c</fullName>
    <label>Prospect Account Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>