packages/ennube-salesforce/force-app/main/default/objects/Account/fields/Step_1_Agent_Website_Data_Mine__c.field-meta.xml
<CustomField>
    <fullName>Step_1_Agent_Website_Data_Mine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Step 1 Agent Website Data Mine</label>
    <type>Checkbox</type>
</CustomField>